[package]
name = "nu_plugin_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
nu-plugin = "0.96.1"
nu-protocol = { version = "0.96.1", features = ["plugin"] }
postgres = { version = "0.19.8", features = ["with-chrono-0_4"] }
rustls = "0.23.12"
tokio = "1.39.2"
tokio-postgres-rustls = "0.12.0"
webpki-roots = "0.26.3"
